--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "start": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.5",
